# megafish

./: .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: about.rst  conf.py  develop.rst  examples.rst  functions.rst  getting_started.rst  index.rst  requirements.txt  user_guide.rst
docs/api/: megafish.config.rst  megafish.decode.rst  megafish.load.rst  megafish.napari.rst  megafish.process.rst  megafish.register.rst  megafish.rst  megafish.segment.rst  megafish.seqfish.rst  megafish.seqif.rst  megafish.tif.rst  megafish.user.rst  megafish.utils.rst  megafish.view.rst
src/megafish/: __init__.py  config.py  decode.py  load.py  napari.py  process.py  register.py  segment.py  seqfish.py  seqif.py  tif.py  utils.py  view.py
src/tests/: test_decode.py  test_load.py  test_napari.py  test_process.py  test_register.py  test_segment.py  test_seqfish.py  test_seqif.py  test_tif.py  test_utils.py  test_view.py
