[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "megafish"
dynamic = ["version"]
description = "Multi-omics Extensible GPU-Accelerated FISH analysis framework"
authors = [
  {name = "Yuma Ito", email = "yumaitou@outlook.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.11",
]
requires-python = "==3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "dask",
    "xarray",
    "zarr",
    "scikit-image",
    "scikit-learn",
    "tifffile",
    "scipy",
    "napari[all]",
    "imaris-ims-file-reader",
]

[project.optional-dependencies]
cpu = ["numpy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "megafish.__version__"}

